// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`basic.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor bar;
}

=====================================output=====================================
class Foo {
  accessor bar
}

================================================================================
`;

exports[`basic.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`basic.js - {"semi":false} format[espree] 1`] = `
"Unexpected token bar (2:12)
  1 | class Foo {
> 2 |   accessor bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token bar"
`;

exports[`basic.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor bar;
}

=====================================output=====================================
class Foo {
  accessor bar;
}

================================================================================
`;

exports[`basic.js format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`basic.js format[espree] 1`] = `
"Unexpected token bar (2:12)
  1 | class Foo {
> 2 |   accessor bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token bar"
`;

exports[`comments.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class A {
  @dec()
  // comment
  accessor b;
}

=====================================output=====================================
class A {
  @dec()
  // comment
  accessor b
}

================================================================================
`;

exports[`comments.js - {"semi":false} format[acorn] 1`] = `
"Unexpected character '@' (2:3)
  1 | class A {
> 2 |   @dec()
    |   ^
  3 |   // comment
  4 |   accessor b;
  5 | }
Cause: Unexpected character '@' (2:2)"
`;

exports[`comments.js - {"semi":false} format[espree] 1`] = `
"Unexpected character '@' (2:3)
  1 | class A {
> 2 |   @dec()
    |   ^
  3 |   // comment
  4 |   accessor b;
  5 | }
Cause: Unexpected character '@'"
`;

exports[`comments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class A {
  @dec()
  // comment
  accessor b;
}

=====================================output=====================================
class A {
  @dec()
  // comment
  accessor b;
}

================================================================================
`;

exports[`comments.js format[acorn] 1`] = `
"Unexpected character '@' (2:3)
  1 | class A {
> 2 |   @dec()
    |   ^
  3 |   // comment
  4 |   accessor b;
  5 | }
Cause: Unexpected character '@' (2:2)"
`;

exports[`comments.js format[espree] 1`] = `
"Unexpected character '@' (2:3)
  1 | class A {
> 2 |   @dec()
    |   ^
  3 |   // comment
  4 |   accessor b;
  5 | }
Cause: Unexpected character '@'"
`;

exports[`computed.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor ["bar"];
}

=====================================output=====================================
class Foo {
  accessor ["bar"]
}

================================================================================
`;

exports[`computed.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor ["bar"];
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`computed.js - {"semi":false} format[espree] 1`] = `
"Unexpected token [ (2:12)
  1 | class Foo {
> 2 |   accessor ["bar"];
    |            ^
  3 | }
  4 |
Cause: Unexpected token ["
`;

exports[`computed.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor ["bar"];
}

=====================================output=====================================
class Foo {
  accessor ["bar"];
}

================================================================================
`;

exports[`computed.js format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor ["bar"];
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`computed.js format[espree] 1`] = `
"Unexpected token [ (2:12)
  1 | class Foo {
> 2 |   accessor ["bar"];
    |            ^
  3 | }
  4 |
Cause: Unexpected token ["
`;

exports[`not-accessor-method.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor() {}
}

=====================================output=====================================
class Foo {
  accessor() {}
}

================================================================================
`;

exports[`not-accessor-method.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor() {}
}

=====================================output=====================================
class Foo {
  accessor() {}
}

================================================================================
`;

exports[`not-accessor-property.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor = 123;
}

=====================================output=====================================
class Foo {
  accessor = 123
}

================================================================================
`;

exports[`not-accessor-property.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor = 123;
}

=====================================output=====================================
class Foo {
  accessor = 123;
}

================================================================================
`;

exports[`private.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor #bar;
}

=====================================output=====================================
class Foo {
  accessor #bar
}

================================================================================
`;

exports[`private.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor #bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`private.js - {"semi":false} format[espree] 1`] = `
"Unexpected token #bar (2:12)
  1 | class Foo {
> 2 |   accessor #bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token #bar"
`;

exports[`private.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  accessor #bar;
}

=====================================output=====================================
class Foo {
  accessor #bar;
}

================================================================================
`;

exports[`private.js format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class Foo {
> 2 |   accessor #bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token (2:11)"
`;

exports[`private.js format[espree] 1`] = `
"Unexpected token #bar (2:12)
  1 | class Foo {
> 2 |   accessor #bar;
    |            ^
  3 | }
  4 |
Cause: Unexpected token #bar"
`;

exports[`static.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor bar;
}

=====================================output=====================================
class Foo {
  static accessor bar
}

================================================================================
`;

exports[`static.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static.js - {"semi":false} format[espree] 1`] = `
"Unexpected token bar (2:19)
  1 | class Foo {
> 2 |   static accessor bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token bar"
`;

exports[`static.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor bar;
}

=====================================output=====================================
class Foo {
  static accessor bar;
}

================================================================================
`;

exports[`static.js format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static.js format[espree] 1`] = `
"Unexpected token bar (2:19)
  1 | class Foo {
> 2 |   static accessor bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token bar"
`;

exports[`static-computed.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor ["bar"];
}

=====================================output=====================================
class Foo {
  static accessor ["bar"]
}

================================================================================
`;

exports[`static-computed.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor ["bar"];
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static-computed.js - {"semi":false} format[espree] 1`] = `
"Unexpected token [ (2:19)
  1 | class Foo {
> 2 |   static accessor ["bar"];
    |                   ^
  3 | }
  4 |
Cause: Unexpected token ["
`;

exports[`static-computed.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor ["bar"];
}

=====================================output=====================================
class Foo {
  static accessor ["bar"];
}

================================================================================
`;

exports[`static-computed.js format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor ["bar"];
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static-computed.js format[espree] 1`] = `
"Unexpected token [ (2:19)
  1 | class Foo {
> 2 |   static accessor ["bar"];
    |                   ^
  3 | }
  4 |
Cause: Unexpected token ["
`;

exports[`static-private.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor #bar;
}

=====================================output=====================================
class Foo {
  static accessor #bar
}

================================================================================
`;

exports[`static-private.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor #bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static-private.js - {"semi":false} format[espree] 1`] = `
"Unexpected token #bar (2:19)
  1 | class Foo {
> 2 |   static accessor #bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token #bar"
`;

exports[`static-private.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Foo {
  static accessor #bar;
}

=====================================output=====================================
class Foo {
  static accessor #bar;
}

================================================================================
`;

exports[`static-private.js format[acorn] 1`] = `
"Unexpected token (2:19)
  1 | class Foo {
> 2 |   static accessor #bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token (2:18)"
`;

exports[`static-private.js format[espree] 1`] = `
"Unexpected token #bar (2:19)
  1 | class Foo {
> 2 |   static accessor #bar;
    |                   ^
  3 | }
  4 |
Cause: Unexpected token #bar"
`;

exports[`with-semicolon-1.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class C {
  accessor clicked = "value";
  [foo]() {}
}
  
=====================================output=====================================
class C {
  accessor clicked = "value";
  [foo]() {}
}

================================================================================
`;

exports[`with-semicolon-1.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   [foo]() {}
  4 | }
  5 |   
Cause: Unexpected token (2:11)"
`;

exports[`with-semicolon-1.js - {"semi":false} format[espree] 1`] = `
"Unexpected token clicked (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   [foo]() {}
  4 | }
  5 |   
Cause: Unexpected token clicked"
`;

exports[`with-semicolon-1.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class C {
  accessor clicked = "value";
  [foo]() {}
}
  
=====================================output=====================================
class C {
  accessor clicked = "value";
  [foo]() {}
}

================================================================================
`;

exports[`with-semicolon-1.js format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   [foo]() {}
  4 | }
  5 |   
Cause: Unexpected token (2:11)"
`;

exports[`with-semicolon-1.js format[espree] 1`] = `
"Unexpected token clicked (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   [foo]() {}
  4 | }
  5 |   
Cause: Unexpected token clicked"
`;

exports[`with-semicolon-2.js - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
class C {
  accessor clicked = "value";
  *foo() {}
}

=====================================output=====================================
class C {
  accessor clicked = "value";
  *foo() {}
}

================================================================================
`;

exports[`with-semicolon-2.js - {"semi":false} format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   *foo() {}
  4 | }
  5 |
Cause: Unexpected token (2:11)"
`;

exports[`with-semicolon-2.js - {"semi":false} format[espree] 1`] = `
"Unexpected token clicked (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   *foo() {}
  4 | }
  5 |
Cause: Unexpected token clicked"
`;

exports[`with-semicolon-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "typescript", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class C {
  accessor clicked = "value";
  *foo() {}
}

=====================================output=====================================
class C {
  accessor clicked = "value";
  *foo() {}
}

================================================================================
`;

exports[`with-semicolon-2.js format[acorn] 1`] = `
"Unexpected token (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   *foo() {}
  4 | }
  5 |
Cause: Unexpected token (2:11)"
`;

exports[`with-semicolon-2.js format[espree] 1`] = `
"Unexpected token clicked (2:12)
  1 | class C {
> 2 |   accessor clicked = "value";
    |            ^
  3 |   *foo() {}
  4 | }
  5 |
Cause: Unexpected token clicked"
`;
